--- a/Lonsdorf_Code_R/Lonsdorf_R_Code_EP.Rmd
+++ b/Lonsdorf_Code_R/Lonsdorf_R_Code_EP.Rmd
@@ -10,30 +10,23 @@ knitr::opts_knit$set(root.dir = "~/Documents/GitHub/spatial-pop-modeling-test/Lo
 library(tidyverse)
 library(raster)
 library(terra)
-
+library(signal)
 ```
 
 ```{r Read in data layers}
-#CDL nesting and floral values 
-biophys <- read.csv("Biophysical_table.csv")
-biophys
+#CDL floral resources, nesting, and foraging 
+reclass_floral <- read.csv("CA_bees_floral.csv") %>%
+  na.omit()
+reclass_nest <- read.csv("CA_bees_nesting.csv") %>%
+  na.omit()
+reclass_lifehist <- read.csv("CA_bees_forage.csv") %>%
+  na.omit()
 
-#Proto-species nesting suitability and foraging activity 
-guild <- read.csv("Guild_table.csv")
-  #Adding maximum number of nests w/in a cell for each proto-species
-  guild$max_nest <- c(3, 6, 9, 12)
-guild
-
-#Description of proto-species:
-  #Sp1- ground-nesting, spring (0.33) and summer (0.67) forager, foraging distance of 670 m, low density (3 queens per cell)
-  #Sp2- stem-nesting, spring (0.75) and summer (0.25) forager, foraging distance of 250 m, med density (6 queens per cell)
-  #Sp3- stem and wood-nesting, spring (0.67) and summer (0.33) forager, foraging distance of 300, med density (9 queens per cell)
-  #Sp4- ground-nesting, spring (0.33), summer (0.33), and fall (0.34) forager, foraging distance of 670 m, high density (12 queens per cell)
 ```
 
 ```{r Create parameters}
 cell_size <- 30 #30x30 m cell size
-spec_num <- nrow(guild) #4 species in guild table
+spec_num <- nrow(reclass_lifehist) #7 species in guild table
 t <- 1 #time step
 
 #Create raster file path
@@ -51,6 +44,7 @@ r <- nrow(curr_LC) #number of rows in raster file
 c <- ncol(curr_LC) #number of columns in raster file
 
 queen_array <- array(0, dim = c(r, c, spec_num, 11)) #empty array to be filled with queens
+max_queen_array <- array(0, dim = c(r, c, spec_num, 11)) #empty array to be filled with max queens
 queen_array_fin <- array(0, dim = c(r, c, spec_num)) #final queen numbers
 pol_ls_score <- array(0, dim = c(r, c, spec_num)) #pollinator landscape score
 dispersers <- array(0, dim = c(r, c, spec_num, 11))
@@ -77,11 +71,11 @@ for (t in 1:21){
   }
   
   #Land cover types for raster file
-    type <- as_vector(unname(unique(curr_LC))) #create a vector of  unique land cover values
+  type <- as_vector(unname(unique(curr_LC))) #create a vector of  unique land cover values
   LC_type <- tibble(type = type, #land cover types in raster file
                     num_pix = 0) #create empty column for number of pixels of each type
   num_LC <- nrow(LC_type) #number of land cover types in raster file
-  tot_LC <- nrow(biophys) #number of land cover values in biophys table
+  tot_LC <- nrow(reclass_nest) #number of land cover values in biophys table
   
   #How many pixels of each cover type
   for (i in 1:num_LC) {
@@ -91,24 +85,14 @@ for (t in 1:21){
   
   #Per capita reproduction rate
   for (s in 1:spec_num) {
-    max_nest <- guild$max_nest[i]
-    reproduction <- #FINISH THIS
-    
-    
-    forage_dist <- guild$alpha[i]
-    radius <- round(forage_dist/)
-  }
-}
-```
-
-```{r testing}
     #Maximum number of nests per cell and max queens produced per nest
-    max_nest <- guild$max_nest[1] #maximum number of nests within a cell
-    #reproduction <- #FINISH THIS
+    max_nest <- reclass_lifehist$Nests[i] #maximum number of nests within a cell
+    reproduction <- reclass_lifehist$Rep[i] #maximum number of queens produced per nest
     
     #Foraging distance matrix
-    forage_dist <- guild$alpha[1] #foraging distance for each species
-    radius <- round(forage_dist/cell_size) #foraging radius in cells
+    forage_dist <- reclass_lifehist$Disp[i] #foraging distance for each species
+    radius <- 2*round(forage_dist/cell_size) #foraging radius in cells
+      #WHY IS IT 2*THE ROUNDED VALUE
     X <- seq(-radius, radius) #all integers between -radius and radius
     Y <- seq(-radius, radius) #all integers between -radius and radius
     XY_grid <- expand.grid(X, Y) %>% #all combinations of X and Y
@@ -119,7 +103,37 @@ for (t in 1:21){
     eff_forage <- sum(dist_mat_decay) #sum of circle distance matrix
     filter <- dist_mat_decay/eff_forage #normalized distant matrix
     
-    #Floral and nesting habitat arrays by species
-      
+    #Initialize floral and nesting habitat
+    HF <- matrix(curr_LC, nrow = r, ncol = c) #matrix of raster values
+    HN <- matrix(curr_LC, nrow = r, ncol = c)
+    LS <- matrix(0, nrow = r, ncol = c)
+    
+    #Reclass landcover for each cover type by species 
+    for (i in 1:tot_LC) {
+      HF[HF == reclass_floral[i,1]] <- reclass_floral[i, s + 1]/100
+      HN[HN == reclass_nest[i,1]] <- reclass_nest[i, s + 1]/100
+    }
+    
+    #Disperse queens
+    if t > 1{
+      max_queen_array[,,s,t] <- matrix(1, nrow = r, ncol = c) * max_nest * HN #Calculate maximum number of queens per cell given landscape conditions
+      queen_array[,,s,t] <- pmin(dispersers[,,s,t-1], max_queen_array) #Takes the smallest value between the two arrays. The number of queens in a cell cannot exceed the maximum.
+      forage <- convolve(HF, filter, type = "open") #Convolution
+      pol_ls_score[,,s] <- HN * forage 
+        #WHAT IS HAPPENING HERE ^^
+    }
+  }
+}
+```
+
+```{r testing}
+test_array <- array(0, dim = c(2, 2, 2, 2))
+test_mat1 <- matrix(c(1,3,5,7), nrow = 2, ncol = 2)
+test_mat2 <- matrix(c(0.7, 0.5, 0.3, 0.1), nrow = 2, ncol = 2)
+test_array[,,1,1] <- matrix(1, nrow = 2, ncol = 2) * test_mat1 * test_mat2
+test_array[,,1,1]
+
+HF[HF == reclass_floral[1,1]] <- reclass_floral[1, 1 + 1]/100
+test_filter <- convolve(HF, filter, type = "open") 
 ```
 
