--- a/Lonsdorf_Code_R/Lonsdorf_R_Code_EP.Rmd
+++ b/Lonsdorf_Code_R/Lonsdorf_R_Code_EP.Rmd
@@ -87,7 +87,7 @@ for (t in 1:21){
   for (s in 1:spec_num) {
     #Maximum number of nests per cell and max queens produced per nest
     max_nest <- reclass_lifehist$Nests[i] #maximum number of nests within a cell
-    reproduction <- reclass_lifehist$Rep[i] #maximum number of queens produced per nest
+    max_rep <- reclass_lifehist$Rep[i] #maximum number of queens produced per nest
     
     #Foraging distance matrix
     forage_dist <- reclass_lifehist$Disp[i] #foraging distance for each species
@@ -121,6 +121,12 @@ for (t in 1:21){
       forage <- convolve(HF, filter, type = "open") #Convolution
       pol_ls_score[,,s] <- HN * forage 
         #WHAT IS HAPPENING HERE ^^
+      
+      rep_temp <- matrix(rnorm(r*c), nrow = r, ncol = c)
+      range <- max(rep_temp) - min(rep_temp)
+      standardized <- floor(max_rep * 2 * (rep_temp - min(rep_temp))/range)
+      rep <- queen_array[,,s,t] * (standardized * forage)
+      dispersers[,,s,t] <- 
     }
   }
 }
@@ -134,6 +140,7 @@ test_array[,,1,1] <- matrix(1, nrow = 2, ncol = 2) * test_mat1 * test_mat2
 test_array[,,1,1]
 
 HF[HF == reclass_floral[1,1]] <- reclass_floral[1, 1 + 1]/100
-test_filter <- convolve(HF, filter, type = "open") 
+test_filter <- convolve(HF, filter, type = "open")
+print(test_filter)
 ```
 
