--- a/Lonsdorf_Code_R/Lonsdorf_R_Code_EP.Rmd
+++ b/Lonsdorf_Code_R/Lonsdorf_R_Code_EP.Rmd
@@ -1,6 +1,7 @@
 ---
 title: "Bee Landscape Population Modeling Attempt"
-output: html_notebook
+output: html_notebook:
+  df_print: paged
 ---
 ```{r Set wd and read in libraries}
 #Set working directory
@@ -21,126 +22,142 @@ reclass_nest <- read.csv("CA_bees_nesting.csv") %>%
   na.omit()
 reclass_lifehist <- read.csv("CA_bees_forage.csv") %>%
   na.omit()
-
 ```
 
 ```{r Create parameters}
 cell_size <- 30 #30x30 m cell size
 spec_num <- nrow(reclass_lifehist) #7 species in guild table
-t <- 1 #time step
+t_step <- 1 #time step
 
 #Create raster file path
 #Rasters taken from https://croplandcros.scinet.usda.gov/
-a <- "~/Documents/GitHub/spatial-pop-modeling-test/Lonsdorf_Code_R/Tiff Files/cdl_Yolo_"
-b <- ".TIF"
-raster_path <- paste0(a, (t+2012), b) #create raster path based on time step
+base <- "Tiff Files/cdl_Yolo_"
+raster_path <- paste0(base, (t_step + 2012), ".TIF") #create raster path based on time step
 ```
 
 ```{r Create empty arrays}
-curr_LC <- rast(raster_path) #assign current time step raster
-crop_extent <- c(566938.2, 626938.2, 4236149, 4296149)
-curr_LC <-  crop(curr_LC, crop_extent)
-r <- nrow(curr_LC) #number of rows in raster file
-c <- ncol(curr_LC) #number of columns in raster file
+curr_LC <- terra::rast(raster_path) #assign current time step raster
+curr_LC <- terra::trim(curr_LC)
+extent <- terra::ext(curr_LC)
 
-queen_array <- array(0, dim = c(r, c, spec_num, 11)) #empty array to be filled with queens
-max_queen_array <- array(0, dim = c(r, c, spec_num, 11)) #empty array to be filled with max queens
-queen_array_fin <- array(0, dim = c(r, c, spec_num)) #final queen numbers
-pol_ls_score <- array(0, dim = c(r, c, spec_num)) #pollinator landscape score
-dispersers <- array(0, dim = c(r, c, spec_num, 11))
+nr <- nrow(curr_LC) #number of rows in raster file
+nc <- ncol(curr_LC) #number of columns in raster file
+
+#Empty arrays/matrices
+  #Arrays with nr, nc, spec_num, and all time steps (20)
+  queen_array <- max_queen_array <- disperse <- array(0, dim = c(nr, nc, spec_num, 20))
+  
+  #Arrays with nr, nc, and spec_num
+  queen_array_fin <- pol_ls_score <- array(0, dim = c(nr, nc, spec_num)) 
+
+  #Matrix with species and all time steps (20)
+  spec_pop <- matrix(0, nrow = spec_num, ncol = 20) #total species population at each time step
 ```
 
 ```{r Initialize queens}
-queen_seed <- array(0, dim = c(r, c, spec_num))
-queen_seed[1016:1025, 1021:1030, ] <- array(runif(n = (10 * 10 * spec_num)), dim = c(10, 10, spec_num)) #generate random number (0-1) in 10x10 array in the center of raster file
-
-#Assign a queen to a cell in array if > 0.8 (20% of cells will receive a queen)
-queen_array[ , , , 1] <- ifelse(queen_seed > 0.8, 1, 0)
+queen_seed <- array(0, dim = c(nr, nc, spec_num))
+queen_seed[611:620, 809:818, ] <- array(runif(n = (10 * 10 * spec_num)), dim = c(10, 10, spec_num)) #generate random number (0-1) in 10x10 array in the center of raster file
+queen_array[ , , , 1] <- ifelse(queen_seed > 0.8, 1, 0) #assign a queen to a cell in array if > 0.8 (20% of cells will receive a queen)
 ```
 
-
 ```{r For loop}
-#Calc weighted average of foraging quality using foraging activity prop 
-
-for (t in 1:21){
+for (t in 1:20){
   #Pull new raster file after 10 years of initializing
-  if t > 11{
-    raster_path <- paste0(a, (t+2012-10), b) #assign new raster file based on time step
-    curr_LC <- raster(raster_path) #current land cover raster
-    curr_LC <-  crop(curr_LC, crop_extent) #crop land cover to same extent
+  if (t > 10) {
+    raster_path <- paste0(base, (t+2012-10), ".TIF") #assign new raster file based on time step
+    curr_LC <- terra::rast(raster_path) #current land cover raster
+    curr_LC <- terra::trim(curr_LC)
+    curr_LC <-  terra::crop(curr_LC, extent) #crop land cover to same extent
   }
-  
-  #Land cover types for raster file
-  type <- as_vector(unname(unique(curr_LC))) #create a vector of  unique land cover values
-  LC_type <- tibble(type = type, #land cover types in raster file
-                    num_pix = 0) #create empty column for number of pixels of each type
-  num_LC <- nrow(LC_type) #number of land cover types in raster file
-  tot_LC <- nrow(reclass_nest) #number of land cover values in biophys table
   
   #How many pixels of each cover type
-  for (i in 1:num_LC) {
-    type_i <- LC_type$type[i]
-    LC_type$num_pix[i] <- sum(values(curr_LC) == type_i, na.rm = T)
-  }
+  LC_type <- terra::freq(curr_LC)[,-1] %>%
+    rename(type = value, num_pix = count)
   
   #Per capita reproduction rate
   for (s in 1:spec_num) {
     #Maximum number of nests per cell and max queens produced per nest
-    max_nest <- reclass_lifehist$Nests[i] #maximum number of nests within a cell
-    max_rep <- reclass_lifehist$Rep[i] #maximum number of queens produced per nest
+    max_nest <- reclass_lifehist$Nests[s] #maximum number of nests within a cell
+    max_rep <- reclass_lifehist$Rep[s] #maximum number of queens produced per nest
     
     #Foraging distance matrix
-    forage_dist <- reclass_lifehist$Disp[i] #foraging distance for each species
-    radius <- 2*round(forage_dist/cell_size) #foraging radius in cells
-      #WHY IS IT 2*THE ROUNDED VALUE
-    X <- seq(-radius, radius) #all integers between -radius and radius
-    Y <- seq(-radius, radius) #all integers between -radius and radius
-    XY_grid <- expand.grid(X, Y) %>% #all combinations of X and Y
-      rename(X = Var1, Y = Var2)
-    
-    dist_mat <- cell_size * sqrt(XY_grid$X^2 + XY_grid$Y^2) #distance to center of circle 
+    forage_dist <- reclass_lifehist$Disp[s] #foraging distance for each species
+    radius <- 2*round(forage_dist/cell_size) #foraging radius in cells, 2 * avg foraging distance ->  95%
+    X <- outer(-radius:radius, rep(1, length(-radius:radius)), FUN = function(x, y) x)  # matrix with center at center of circle
+    Y <- outer(rep(1, length(-radius:radius)), -radius:radius, FUN = function(x, y) y)  # matrix with center at center of circle
+
+    dist_mat <- as.matrix(cell_size * sqrt(X^2 + Y^2)) #distance to center of circle 
     dist_mat_decay <- exp(-dist_mat/forage_dist) * (dist_mat <= 2 * forage_dist) #exp decay to transform square into circle
     eff_forage <- sum(dist_mat_decay) #sum of circle distance matrix
-    filter <- dist_mat_decay/eff_forage #normalized distant matrix
+    filter <- dist_mat_decay/eff_forage #normalized distant matrix (sums to 1)
     
     #Initialize floral and nesting habitat
-    HF <- matrix(curr_LC, nrow = r, ncol = c) #matrix of raster values
-    HN <- matrix(curr_LC, nrow = r, ncol = c)
-    LS <- matrix(0, nrow = r, ncol = c)
+    HF <- terra::as.matrix(curr_LC, wide = T)
+    HN <- terra::as.matrix(curr_LC, wide = T)
     
     #Reclass landcover for each cover type by species 
+    tot_LC <- nrow(reclass_nest) #number of land cover values in biophys table 
     for (i in 1:tot_LC) {
-      HF[HF == reclass_floral[i,1]] <- reclass_floral[i, s + 1]/100
-      HN[HN == reclass_nest[i,1]] <- reclass_nest[i, s + 1]/100
+      HF[HF == reclass_floral[i,1]] <- reclass_floral[i, s + 1]/100 #convert values to proportion of floral resource suitability
+      HN[HN == reclass_nest[i,1]] <- reclass_nest[i, s + 1]/100 #convert values to proportion of nesting suitability
     }
     
+    #Convert HF to raster for convolution
+    HF_rast <- terra::rast(HF)
+    forage <- terra::focal(HF_rast, filter) #convolution based on distance and available floral resources
+    forage_mat <- terra::as.matrix(forage, wide = T)
+    pol_ls_score[,,s] <- HN * forage_mat
+    
     #Disperse queens
-    if t > 1{
-      max_queen_array[,,s,t] <- matrix(1, nrow = r, ncol = c) * max_nest * HN #Calculate maximum number of queens per cell given landscape conditions
-      queen_array[,,s,t] <- pmin(dispersers[,,s,t-1], max_queen_array) #Takes the smallest value between the two arrays. The number of queens in a cell cannot exceed the maximum.
-      forage <- convolve(HF, filter, type = "open") #Convolution
-      pol_ls_score[,,s] <- HN * forage 
-        #WHAT IS HAPPENING HERE ^^
+    if (t > 1) {
+      max_queen_array[,,s,t] <- matrix(1, nrow = nr, ncol = nc) * max_nest * HN #Calculate maximum number of queens per cell given landscape conditions
+      queen_array[,,s,t] <- pmin(disperse[,,s,t-1], max_queen_array[,,s,t]) #Takes the smallest value between the two arrays. The number of queens in a cell cannot exceed the maximum.
       
-      rep_temp <- matrix(rnorm(r*c), nrow = r, ncol = c)
+      rep_temp <- matrix(rnorm(nr*nc), nrow = nr, ncol = nc) #Random numbers to create variation
+      range <- max(rep_temp) - min(rep_temp) #range of random values
+      standardized <- floor(max_rep * 2 * (rep_temp - min(rep_temp))/range) #standardize values
+      rep <- queen_array[,,s,t] * (standardized * forage_mat) #generate reproduction using 
+      rep_rast <- terra::rast(rep)
+      disperse[,,s,t] <- terra::as.matrix(focal(rep_rast, filter), wide = T) #convolution of dispersal of new queens 
+      
+    } else {
+      #Where t = 1 (initial conditions)
+      rep_temp <- matrix(rnorm(nr*nc), nrow = nr, ncol = nc)
       range <- max(rep_temp) - min(rep_temp)
       standardized <- floor(max_rep * 2 * (rep_temp - min(rep_temp))/range)
-      rep <- queen_array[,,s,t] * (standardized * forage)
-      dispersers[,,s,t] <- 
+      rep <- queen_array[,,s,t] * (standardized * forage_mat)
+      rep_rast <- terra::rast(rep)
+      disperse[,,s,t] <- terra::as.matrix(focal(rep_rast, filter), wide = T)
+    }
+    
+    spec_pop[s,t] <- sum(queen_array[,,s,t], na.rm = T) #population size of each species at given time step
+    
+    if (t == 20){
+      queen_array_fin[,,s] <- queen_array[,,s,t]
+      par(mfrow = c(2,3))
+      image(queen_array_fin[,,s], axes = F)
     }
   }
 }
 ```
 
-```{r testing}
-test_array <- array(0, dim = c(2, 2, 2, 2))
-test_mat1 <- matrix(c(1,3,5,7), nrow = 2, ncol = 2)
-test_mat2 <- matrix(c(0.7, 0.5, 0.3, 0.1), nrow = 2, ncol = 2)
-test_array[,,1,1] <- matrix(1, nrow = 2, ncol = 2) * test_mat1 * test_mat2
-test_array[,,1,1]
+```{r Images}
+#Images for each species' pollinator landscape score
+par(mfrow = c(2,3)) #set image parameters 2 x 3 grid, one image for each species
+for (s in 1:spec_num) {
+  image(pol_ls_score[,,s], axes = F) 
+}
 
-HF[HF == reclass_floral[1,1]] <- reclass_floral[1, 1 + 1]/100
-test_filter <- convolve(HF, filter, type = "open")
-print(test_filter)
+#Images for each time step/species (manually assign species s and run loop)
+par(mfrow = c(4,5)) #set image parameters 4 x 5 grid, one image for each time step
+for (i in 1:20) {
+  image(disperse[,,s,i], axes = F)
+}
 ```
+
+```{r testing}
+
+```
+
+
 
