--- a/Lonsdorf_Code_R/Lonsdorf_R_Code_EP.Rmd
+++ b/Lonsdorf_Code_R/Lonsdorf_R_Code_EP.Rmd
@@ -8,20 +8,19 @@ output: html_notebook:
 knitr::opts_knit$set(root.dir = "~/Documents/GitHub/spatial-pop-modeling-test/Lonsdorf_Code_R/")
 
 #Load libraries
-library(tidyverse)
-library(raster)
-library(terra)
-library(signal)
+#library(tidyverse)
+#library(terra)
+#library(signal)
 ```
 
 ```{r Read in data layers}
 #CDL floral resources, nesting, and foraging 
-reclass_floral <- read.csv("CA_bees_floral.csv") %>%
-  na.omit()
-reclass_nest <- read.csv("CA_bees_nesting.csv") %>%
-  na.omit()
-reclass_lifehist <- read.csv("CA_bees_forage.csv") %>%
-  na.omit()
+reclass_floral <- read.csv("CA_bees_floral.csv") |> na.omit()
+reclass_floral[,-1] <- reclass_floral[,-1] / 100
+reclass_nest <- read.csv("CA_bees_nesting.csv") |> na.omit()
+reclass_nest[,-1] <- reclass_nest[,-1] / 100
+
+reclass_lifehist <- read.csv("CA_bees_forage.csv") |> na.omit()
 ```
 
 ```{r Create parameters}
@@ -38,7 +37,7 @@ raster_path <- paste0(base, (t_step + 2012), ".TIF") #create raster path based o
 ```{r Create empty arrays}
 curr_LC <- terra::rast(raster_path) #assign current time step raster
 curr_LC <- terra::trim(curr_LC)
-extent <- terra::ext(curr_LC)
+extent <- floor(terra::ext(curr_LC))
 
 nr <- nrow(curr_LC) #number of rows in raster file
 nc <- ncol(curr_LC) #number of columns in raster file
@@ -60,23 +59,28 @@ queen_seed[611:620, 809:818, ] <- array(runif(n = (10 * 10 * spec_num)), dim = c
 queen_array[ , , , 1] <- ifelse(queen_seed > 0.8, 1, 0) #assign a queen to a cell in array if > 0.8 (20% of cells will receive a queen)
 ```
 
+
 ```{r For loop}
-for (t in 1:20){
-  #Pull new raster file after 10 years of initializing
+start <- Sys.time()
+ for (t in 1:20){
+  print(t)
+   print(Sys.time() - start); flush.console()
+     #Pull new raster file after 10 years of initializing
   if (t > 10) {
     raster_path <- paste0(base, (t+2012-10), ".TIF") #assign new raster file based on time step
     curr_LC <- terra::rast(raster_path) #current land cover raster
-    curr_LC <- terra::trim(curr_LC) #remove excess NA rows
+    #curr_LC <- terra::trim(curr_LC) #remove excess NA rows
     curr_LC <-  terra::crop(curr_LC, extent) #crop land cover to same extent
   }
   
   #How many pixels of each cover type
-  LC_type <- terra::freq(curr_LC)[,-1] %>%
-    rename(type = value, num_pix = count)
+  LC_type <- terra::freq(curr_LC)[,-1]
+  names(LC_type) = c("type", "num_pix")
   
   #Per capita reproduction rate
-  for (s in 1:spec_num) {
-    #Maximum number of nests per cell and max queens produced per nest
+  for (s in 1:1) { #spec_num) {
+    print(paste("species ", s)); flush.console()
+      #Maximum number of nests per cell and max queens produced per nest
     max_nest <- reclass_lifehist$Nests[s] #maximum number of nests within a cell
     max_rep <- reclass_lifehist$Rep[s] #maximum number of queens produced per nest
     
@@ -92,25 +96,23 @@ for (t in 1:20){
     filter <- dist_mat_decay/eff_forage #normalized distant matrix (sums to 1)
     
     #Initialize floral and nesting habitat
-    HF <- terra::as.matrix(curr_LC, wide = T)
-    HN <- terra::as.matrix(curr_LC, wide = T)
+    #HF <- HN <- terra::as.matrix(curr_LC, wide = TRUE)
+    # HN <- terra::as.matrix(curr_LC, wide = TRUE)
     
     #Reclass landcover for each cover type by species 
     tot_LC <- nrow(reclass_nest) #number of land cover values in biophys table 
-    for (i in 1:tot_LC) {
-      HF[HF == reclass_floral[i,1]] <- reclass_floral[i, s + 1]/100 #convert values to proportion of floral resource suitability
-      HN[HN == reclass_nest[i,1]] <- reclass_nest[i, s + 1]/100 #convert values to proportion of nesting suitability
-    }
-    
-    #Convert HF to raster for convolution
-    HF_rast <- terra::rast(HF)
-    forage <- terra::focal(HF_rast, filter) #convolution based on distance and available floral resources
+    HF = terra::classify(curr_LC, reclass_floral[, c(1, s+1)])
+    HN = terra::classify(curr_LC, reclass_nest[, c(1, s+1)]) 
+    HN = terra::as.matrix(HN, wide=TRUE)
+        #Convert HF to raster for convolution
+    forage <- terra::focal(HF, filter) #convolution based on distance and available floral resources
     forage_mat <- terra::as.matrix(forage, wide = T)
     pol_ls_score[,,s] <- HN * forage_mat
+#    pol_ls_score[,,s] <- terra::as.matrix(HN * forage, wide = T)
     
     #Disperse queens
     if (t > 1) {
-      max_queen_array[,,s,t] <- matrix(1, nrow = nr, ncol = nc) * max_nest * HN #Calculate maximum number of queens per cell given landscape conditions
+      max_queen_array[,,s,t] <- max_nest * HN #Calculate maximum number of queens per cell given landscape conditions
       queen_array[,,s,t] <- pmin(disperse[,,s,t-1], max_queen_array[,,s,t]) #Takes the smallest value between the two arrays. The number of queens in a cell cannot exceed the maximum.
       
       rep_temp <- matrix(rnorm(nr*nc), nrow = nr, ncol = nc) #Random numbers to create variation
@@ -118,16 +120,16 @@ for (t in 1:20){
       standardized <- floor(max_rep * 2 * (rep_temp - min(rep_temp))/range) #standardize values
       rep <- queen_array[,,s,t] * (standardized * forage_mat) #generate reproduction using 
       rep_rast <- terra::rast(rep)
-      disperse[,,s,t] <- terra::as.matrix(focal(rep_rast, filter), wide = T) #convolution of dispersal of new queens 
+      disperse[,,s,t] <- terra::as.matrix(terra::focal(rep_rast, filter), wide = T) #convolution of dispersal of new queens 
       
     } else {
       #Where t = 1 (initial conditions)
       rep_temp <- matrix(rnorm(nr*nc), nrow = nr, ncol = nc)
-      range <- max(rep_temp) - min(rep_temp)
+      range <- diff(range(rep_temp))
       standardized <- floor(max_rep * 2 * (rep_temp - min(rep_temp))/range)
       rep <- queen_array[,,s,t] * (standardized * forage_mat)
       rep_rast <- terra::rast(rep)
-      disperse[,,s,t] <- terra::as.matrix(focal(rep_rast, filter), wide = T)
+      disperse[,,s,t] <- terra::as.matrix(terra::focal(rep_rast, filter), wide = T)
     }
     
     spec_pop[s,t] <- sum(queen_array[,,s,t], na.rm = T) #population size of each species at given time step
@@ -143,6 +145,9 @@ for (t in 1:20){
 
 ```{r Images}
 #Images for each species' pollinator landscape score
+
+x <- terra::setValues(terra::rast(curr_LC, nlyr=7), queen_array_fin)
+
 par(mfrow = c(2,3)) #set image parameters 2 x 3 grid, one image for each species
 for (s in 1:spec_num) {
   image(pol_ls_score[,,s], axes = F) 
